--- a/templates/recipe/container_detail.html
+++ b/templates/recipe/container_detail.html
@@ -1,9 +1,17 @@
 <html>
+<head>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+</head>
+
+<body>
+
+
 <h1>{{ container.title }}</h1>
 <p>{{ container.summary }}</p>
 Versions: {{ version.ingredients }}
 ID = {{ container }}
-
 
 
 <br/>
@@ -26,26 +34,48 @@ ID = {{ container }}
 </ol>
 
 <h2>Versions</h2>
+<ol>
+{% for version in version_list reversed %}
 
-{% for version in version_list %}
-
-	{{ version.Note }}
+	<li>{{ version.Note }}</li>
 
 {% endfor %}
-
+</ol>
 
 <h1>Edit recipe</h1>
 
 
-<form action="." method="post">{% csrf_token %}
+<form action="" method="post" id="recipeForm">{% csrf_token %}
+<label>Ingredients</label>
+<fieldset class="pre_pop" id="ingredient_1">
+<input type="text" placeholder="Amount 1" name="ingredient0_amt" id="ingredient1_amt" class="amt" />
+<input type="text" placeholder="Ingredient 1" name="ingredient1_ingredient" id="ingredient1_ingredient" class="ingredient" />
+</fieldset>
+<fieldset class="pre_pop" id="ingredient_2">
+<input type="text" placeholder="Amount 2" name="ingredient0_amt" id="ingredient2_amt" class="amt" />
+<input type="text" placeholder="Ingredient 2" name="ingredient1_ingredient" id="ingredient2_ingredient" class="ingredient" />
+</fieldset>
+<fieldset class="pre_pop" id="ingredient_3">
+<input type="text" placeholder="Amount 3" name="ingredient3_amt" id="ingredient3_amt" class="amt" />
+<input type="text" placeholder="Ingredient 3" name="ingredient3_ingredient" id="ingredient3_ingredient" class="ingredient" />
+</fieldset>
+<fieldset class="pre_pop" id="step_1">
+	<textarea placeholder="Step 1" name="step1" id="step1" class="step"></textarea>
+</fieldset>
+<fieldset>
+	{{ version_form.Note }}
+</fieldset>
 
 
 
-{{ ingredient_formset.as_p }}
-{{ step_formset.as_p }}
-{{ form.as_p }}
+<input type="submit" value="submit" id="submitRecipe" />
 
-<input type="submit" value="submit" />
+<div style="display:none;">
+{{ version_form.ingredients }}
+{{ version_form.steps }}
+{{ version_form.recipe }}
+</div>
+
 
 </form>
 
@@ -68,4 +98,91 @@ ID = {{ container }}
 <textarea name="comment"></textarea>
 <br />
 <input type="hidden" value="{{ container.id }}" />{% endcomment %}
+
+
+
+
+
+<script>
+var recipe = {
+
+	forms: {
+	
+		recipeForm: function() {
+			var ingredientsJsonField = $("#id_ingredients");
+			var stepsJsonField = $("#id_steps");
+			var prePops = $(".pre_pop");
+			var submit = $("#submitIngredients");
+			var fieldSets = $("form fieldset");
+			var fieldID;
+			$("#submitRecipe").click(function(e) {
+				e.preventDefault();
+				var ingredients = {};
+				var steps = {};
+				$.each(fieldSets, function(key, fieldset) {
+					var fieldID = "";
+					var self = this;
+					fieldID = fieldset.id.split("_");					
+					var amountField = $(self).find("input.amt");
+					var ingredientField = $(self).find("input.ingredient");
+					var stepField = $(self).find("textarea.step")
+					if(fieldID[0] == "ingredient") {
+						amount = amountField.val();
+						ingredient = ingredientField.val();
+						if (ingredientField.val().length || amountField.val().length) { 
+							amount = amountField.val();
+							ingredient = ingredientField.val();						
+							ingredients[fieldID[1]] = {
+								"amt": amount,
+								"ingredient": ingredient
+							
+							
+							};
+						
+							ingredientsJsonField.val(JSON.stringify(ingredients));
+						}
+					} else if (fieldID[0] == "step") {
+						step = stepField.val();
+						if (stepField.val().length) { 
+							steps[fieldID[1]] = {
+								"step": step
+							
+							
+							};
+						
+							stepsJsonField.val(JSON.stringify(steps));
+						}
+					}
+					
+				});	
+			
+			$("#recipeForm").submit();
+
+			});
+			
+			
+		},
+		
+		init: function() {
+			this.recipeForm();
+		}
+	
+	},
+	
+	init: function() {
+		
+		var self = this;
+		
+		self.forms.init();
+	}
+
+}
+recipe.init();
+
+
+</script>
+
+
+
+</body>
 </html>
