--- a/templates/recipe/add.html
+++ b/templates/recipe/add.html
@@ -8,6 +8,9 @@
 
 {% block body %}
 <div class="container">
+{{ test }}
+{{ recipe_form_errors }}
+{{ version_form_errors }}
 <form action="" id="recipeForm" method="post">{% csrf_token %}
 
 <legend>General Info</legend>
@@ -17,7 +20,7 @@
 {% include "includes/static_form.html" %}
 
 
-
+<br /><br />
 	
 	<input type="submit" value="submit" id="submitRecipe" class="btn btn-success btn-large" />
 	
