--- a/templates/recipe/container_detail.html
+++ b/templates/recipe/container_detail.html
@@ -44,7 +44,7 @@
 			</table>
 		</div>
 	</div>
-	<h1>Edit recipe</h1>
+	<h1>New Version</h1>
 	
 	
 	<form action="" method="post" id="recipeForm">{% csrf_token %}
