Add Recipe now attaches user object to recipe

--- a/templates/recipe/container_detail.html
+++ b/templates/recipe/container_detail.html
@@ -10,6 +10,7 @@
 		<div class="span12">
 		<h1>{{ container.title }}</h1>
 		<p>{{ container.summary }}</p>
+		<p>Created by {{ container.created_by }}</p>
 		</div>
 	</div>
 	<div class="row">
