--- a/templates/recipe/recipe_list.html
+++ b/templates/recipe/recipe_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block post_style %}{{ block.super }} 
-
+{% load url from future %}
 
 
 {% endblock %}
@@ -8,10 +8,28 @@
 <div class="container">
 <h1>Recipes</h1>
 
+{% if user.is_authenticated %}
 
-    {% for recipe in recipe_list %}
-    	<li><a href="/recipe/{{ recipe.slug }}">{{ recipe.title }}</a></li>
-    {% endfor %}
+
+		{{ test }}
+	
+		{% for recipe in recipes %}
+			<li><a href="/recipe/{{ recipe.slug }}">{{ recipe.title }}</a></li>
+		{% endfor %}
+		
+		
+    {% else %}
+		<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+		{% csrf_token %}
+		<p><label for="id_username">Username:</label> <input id="id_username" type="text" name="username" maxlength="30" /></p>
+		<p><label for="id_password">Password:</label> <input type="password" name="password" id="id_password" /></p>
+	
+		<input type="submit" value="Log in" />
+		<input type="hidden" name="next" value="" />
+		</form>
+
+
+{% endif %}  
 </div>
 
 {% endblock %}
