--- a/templates/includes/static_form.html
+++ b/templates/includes/static_form.html
@@ -1,26 +1,59 @@
-	<legend>Ingredients</legend>
-	<fieldset class="pre_pop ingredient_group" id="ingredient_1">
-		<input type="text" placeholder="Amount" name="ingredient0_amt" id="ingredient1_amt" class="amt" />
-		<input type="text" placeholder="Ingredient" name="ingredient1_ingredient" id="ingredient1_ingredient" class="ingredient" />
+{% if version %}
+<legend>Ingredients</legend>
+
+{% for ingredient, value in version.ingredients.items %}
+	<fieldset class="pre_pop ingredient_group" id="ingredient_{{ forloop.counter }}">
+	<input type="text" value="{{ value.amt }}" name="ingredient{{ forloop.counter }}_amt" id="ingredient{{ forloop.counter }}_amt" class="amt" />
+	<input type="text" value="{{ value.ingredient }}" name="ingredient{{ forloop.counter }}_ingredient" id="ingredient{{ forloop.counter }}_ingredient" class="ingredient" />
 	</fieldset>
-	<fieldset class="pre_pop ingredient_group" id="ingredient_2">
-		<input type="text" placeholder="Amount" name="ingredient0_amt" id="ingredient2_amt" class="amt" />
-		<input type="text" placeholder="Ingredient" name="ingredient1_ingredient" id="ingredient2_ingredient" class="ingredient" />
-	</fieldset>
-	<fieldset class="pre_pop ingredient_group" id="ingredient_3">
-		<input type="text" placeholder="Amount" name="ingredient3_amt" id="ingredient3_amt" class="amt" />
-		<input type="text" placeholder="Ingredient" name="ingredient3_ingredient" id="ingredient3_ingredient" class="ingredient" />
-	</fieldset>
-	
-	<a href="#" id="addIngredients">Add Ingredients</a>
-	
-	<legend>Steps</legend>	
-	<fieldset class="pre_pop step_group" id="step_1">
-		<textarea placeholder="Step" name="step" id="step" class="step"></textarea>
-	</fieldset>
-	<fieldset class="pre_pop step_group" id="step_2">
-		<textarea placeholder="Step" name="step" id="step" class="step"></textarea>
-	</fieldset>
-	
-	
-	<a href="#" id="addSteps">Add Steps</a>
+{% endfor %}
+
+<a href="#" id="addIngredients">Add Ingredients</a>
+
+<legend>Steps</legend>	
+
+{% for key, step in version.steps.items %}
+			
+			
+		
+<fieldset class="pre_pop step_group" id="step_{{ forloop.counter }}">
+<textarea name="step_{{ forloop.counter }}" id="step_{{ forloop.counter }}" class="step">{{ step.step }}</textarea>
+</fieldset>
+
+
+{% endfor %}
+
+<a href="#" id="addSteps">Add Steps</a>
+
+
+{% else %}
+
+
+<legend>Ingredients</legend>
+<fieldset class="pre_pop ingredient_group" id="ingredient_1">
+<input type="text" placeholder="Amount" name="ingredient0_amt" id="ingredient1_amt" class="amt" />
+<input type="text" placeholder="Ingredient" name="ingredient1_ingredient" id="ingredient1_ingredient" class="ingredient" />
+</fieldset>
+<fieldset class="pre_pop ingredient_group" id="ingredient_2">
+<input type="text" placeholder="Amount" name="ingredient0_amt" id="ingredient2_amt" class="amt" />
+<input type="text" placeholder="Ingredient" name="ingredient1_ingredient" id="ingredient2_ingredient" class="ingredient" />
+</fieldset>
+<fieldset class="pre_pop ingredient_group" id="ingredient_3">
+<input type="text" placeholder="Amount" name="ingredient3_amt" id="ingredient3_amt" class="amt" />
+<input type="text" placeholder="Ingredient" name="ingredient3_ingredient" id="ingredient3_ingredient" class="ingredient" />
+</fieldset>
+
+<a href="#" id="addIngredients">Add Ingredients</a>
+
+<legend>Steps</legend>	
+<fieldset class="pre_pop step_group" id="step_1">
+<textarea placeholder="Step" name="step" id="step" class="step"></textarea>
+</fieldset>
+<fieldset class="pre_pop step_group" id="step_2">
+<textarea placeholder="Step" name="step" id="step" class="step"></textarea>
+</fieldset>
+
+
+<a href="#" id="addSteps">Add Steps</a>
+
+{% endif %}
