--- a/templates/recipe/recipe_detail.html
+++ b/templates/recipe/recipe_detail.html
@@ -56,6 +56,7 @@
 	{% include "includes/static_form.html" %}
 
 	<fieldset>
+		<label>Make a note about your revision</label>
 		{{ version_form.Note }}
 	</fieldset>
 	
