--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@ a#logo {
 </head>
 
 <body>
-<a class="addLink btn btn-large btn-primary" href="/recipe/add/"><i class="icon-plus-sign icon-white"></i> Add Recipe</a>
+{% if user.is_authenticated %}<a class="addLink btn btn-large btn-primary" href="/recipe/add/"><i class="icon-plus-sign icon-white"></i> Add Recipe</a>{% endif %}
 
 
 <div class="container">
