Revert "Stable and working on Webfaction"
This reverts commit f67aae98aabf1bf585c072eec796a117e823e294.

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@ a#logo {
 </head>
 
 <body>
-{% if user.is_authenticated %}<a class="addLink btn btn-large btn-primary" href="/recipe/add/"><i class="icon-plus-sign icon-white"></i> Add Recipe</a>{% endif %}
+<a class="addLink btn btn-large btn-primary" href="/recipe/add/"><i class="icon-plus-sign icon-white"></i> Add Recipe</a>
 
 
 <div class="container">
