--- a/templates/recipe/recipe_list.html
+++ b/templates/recipe/recipe_list.html
@@ -24,10 +24,9 @@
 		<p><label for="id_password">Password:</label> <input type="password" name="password" id="id_password" /></p>
 	
 		<input type="submit" value="Log in" />
-		<input type="hidden" name="next" value="/recipes/" />
+		<input type="hidden" name="next" value="" />
 		</form>
 
-	<h3>No account? <a href="/accounts/register/">Create one now &raquo;</a></h3>
 
 {% endif %}  
 
